--- a/_site.yml
+++ b/_site.yml
@@ -17,6 +17,10 @@ navbar:
           href: LECTURE1.html
         - text: "Introduction to population ecology"
           href: LECTURE2.html
+    - text: "Labs"
+      menu:
+        - text: "Lab 1: exponential growth"
+          href: LAB1.html
     - text: "Links"
       href: Links.html
       
