--- a/_site.yml
+++ b/_site.yml
@@ -19,6 +19,10 @@ navbar:
           href: LECTURE2.html
         - text: "Thomas Robert Malthus"
           href: LECTURE3.html
+        - text: "Population Regulation"
+          href: LECTURE4.html
+        - text: "Passenger Pigeon"
+          href: LECTURE5.html
     - text: "Labs"
       menu:
         - text: "Lab 1: exponential growth"
