--- a/_site.yml
+++ b/_site.yml
@@ -27,6 +27,8 @@ navbar:
       menu:
         - text: "Lab 1: exponential growth"
           href: LAB1.html
+        - text: "Lab 2: logistic growth"
+          href: LAB2.html
     - text: "Links"
       href: Links.html
       
