--- a/_site.yml
+++ b/_site.yml
@@ -23,6 +23,8 @@ navbar:
           href: LECTURE4.html
         - text: "Passenger Pigeon"
           href: LECTURE5.html
+        - text: "Age-structured populations"
+          href: LECTURE6.html
     - text: "Labs"
       menu:
         - text: "Lab 1: exponential growth"
