--- a/_site.yml
+++ b/_site.yml
@@ -25,6 +25,8 @@ navbar:
           href: LECTURE5.html
         - text: "Age-structured populations"
           href: LECTURE6.html
+        - text: "Stochastic population models"
+          href: LECTURE7.html
     - text: "Labs"
       menu:
         - text: "Lab 1: exponential growth"
