lab 3 age structured populations

--- a/_site.yml
+++ b/_site.yml
@@ -33,6 +33,8 @@ navbar:
           href: LAB1.html
         - text: "Lab 2: logistic growth"
           href: LAB2.html
+        - text: "Lab 3: age-structured population growth"
+          href: LAB3.html
     - text: "Links"
       href: Links.html
       
