lecture on matrices

--- a/_site.yml
+++ b/_site.yml
@@ -25,8 +25,10 @@ navbar:
           href: LECTURE5.html
         - text: "Age-structured populations"
           href: LECTURE6.html
-        - text: "Stochastic population models"
+        - text: "Matrix population models"
           href: LECTURE7.html
+        - text: "Stochastic population models"
+          href: LECTURE8.html
     - text: "Labs"
       menu:
         - text: "Lab 1: exponential growth"
