--- a/_site.yml
+++ b/_site.yml
@@ -29,8 +29,10 @@ navbar:
           href: LECTURE8.html
         - text: "Small population paradigm"
           href: LECTURE9.html
-        - text: "Declining population paradigm"
+        - text: "Individual-based models"
           href: LECTURE10.html
+        - text: "Declining population paradigm"
+          href: LECTURE11.html
     - text: "Labs"
       menu:
         - text: "Lab 1: exponential growth"
