--- a/_site.yml
+++ b/_site.yml
@@ -33,6 +33,10 @@ navbar:
           href: LECTURE10.html
         - text: "Declining population paradigm"
           href: LECTURE11.html
+        - text: "Population Viability Analysis"
+          href: LECTURE12.html
+        - text: "Metapopulations"
+          href: LECTURE13.html
     - text: "Labs"
       menu:
         - text: "Lab 1: exponential growth"
@@ -41,12 +45,16 @@ navbar:
           href: LAB2.html
         - text: "Lab 3: age-structured population growth"
           href: LAB3.html
-        - text: "Lab 4: matrix population models (short)"
+        - text: "Lab 4: matrix population models"
           href: LAB4.html
         - text: "Lab 5: stochasticity and uncertainty"
           href: LAB5.html
+        - text: "Lab 6: metapopulations!"
+          href: LAB6.html
         - text: "Final Projects!"
           href: FINAL_PROJECTS.html
+        - text: "Extra Credit!"
+          href: EXTRA_CREDIT.html
     - text: "Links"
       href: Links.html
       
