--- a/_site.yml
+++ b/_site.yml
@@ -65,8 +65,8 @@ navbar:
           href: LAB4.html
         - text: "Lab 5: stochasticity and uncertainty"
           href: LAB5.html
-#        - text: "Lab 6: metapopulations"
-#          href: LAB6.html
+        - text: "Lab 6: metapopulations"
+          href: LAB6.html
 #        - text: "Lab 7: capture-mark-recapture"
 #          href: LAB7.html
         - text: "Final Projects!"
