--- a/_site.yml
+++ b/_site.yml
@@ -67,8 +67,8 @@ navbar:
           href: LAB5.html
         - text: "Lab 6: metapopulations"
           href: LAB6.html
-#        - text: "Lab 7: capture-mark-recapture"
-#          href: LAB7.html
+        - text: "Lab 7: capture-mark-recapture"
+          href: LAB7.html
         - text: "Final Projects!"
           href: FINAL_PROJECTS.html
         - text: "Extra Credit!"
