--- a/_site.yml
+++ b/_site.yml
@@ -15,11 +15,11 @@ navbar:
           href: LECTURE1.html
         - text: "Introduction to population ecology"
           href: LECTURE2.html
-        - text: "Thomas Robert Malthus"
+        - text: "Thomas Robert Malthus (Limits to growth)"
           href: LECTURE3.html
-        - text: "Population Regulation"
+        - text: "Population Regulation (Logistic growth)"
           href: LECTURE4.html
-        - text: "Passenger Pigeon"
+        - text: "Positive density dependence (Allee effect)"
           href: LECTURE5.html
         - text: "Age-structured populations"
           href: LECTURE6.html
