--- a/_site.yml
+++ b/_site.yml
@@ -15,7 +15,7 @@ navbar:
           href: LECTURE1.html
         - text: "Introduction to population ecology"
           href: LECTURE2.html
-        - text: "Thomas Robert Malthus (Limits to growth)"
+        - text: "Thomas Malthus (Limits to growth)"
           href: LECTURE3.html
         - text: "Population Regulation (Logistic growth)"
           href: LECTURE4.html
@@ -29,16 +29,10 @@ navbar:
           href: LECTURE8.html
         - text: "Small population paradigm"
           href: LECTURE9.html
-        - text: "Individual-based models"
-          href: LECTURE10.html
         - text: "Declining population paradigm"
           href: LECTURE11.html
-        - text: "Population Viability Analysis"
-          href: LECTURE12.html
         - text: "Metapopulations"
           href: LECTURE13.html
-        - text: "PVA example: pdogs and ferrets"
-          href: LECTURE14.html
         - text: "Parameter estimation"
           href: LECTURE15.html
         - text: "Species interactions: competition"
@@ -71,8 +65,14 @@ navbar:
           href: LAB7.html
         - text: "Final Projects!"
           href: FINAL_PROJECTS.html
+        - text: "Overview of PVA"
+          href: LECTURE12.html
+        - text: "PVA example: pdogs and ferrets"
+          href: LECTURE14.html
         - text: "Extra Credit!"
           href: EXTRA_CREDIT.html
+        - text: "Individual-based models"
+          href: LECTURE10.html
     - text: "Links"
       href: Links.html
       
